# gd-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
benches/: arguments.rs  binary.rs  expression.rs  format.rs  nullable_maximum.rs  par_benchmark.rs  price-total-10k.md  price-total-2k.md  price-total-500k.md  price_total.rs  price_total_500k.rs  run_price_total_500k.sh  sqlite.rs  table.rs  table_nightly_simd.rs  text.rs  value.rs
benches/cpp-reference/: CMakeLists.txt  CMakePresets.json  README.md  arguments_benchmark.cpp  binary_benchmark.cpp  expression_benchmark.cpp  memops_benchmark.cpp  par_benchmark.cpp  price_total_500k_benchmark.cpp  price_total_benchmark.cpp  sqlite_benchmark.cpp  stream_benchmark.cpp  table_column_buffer_benchmark.cpp  table_index_benchmark.cpp  utf8_benchmark.cpp  variant_benchmark.cpp
docs/: arguments.md  binary.md  examples.md  expression.md  performance.md  sqlite.md  table.md  text.md  value.md
docs/ai/: benchmarks.md  commits.md  documentation.md  index.md  pre-commit.md  repository-boundaries.md  unsafe-code.md  validation.md
docs/api/: arguments.md  cpp-only.md  expressions.md  formatting.md  index.md  indexes.md  sqlite.md  tables.md  text.md  values.md
docs/high-level/: architecture.md  arguments.md  binary.md  examples.md  expression.md  format.md  perf_large_table.md  perf_memory.md  perf_stream.md  performance.md  table.md  value.md
docs/port/: compatibility.md  cpp-gd-issues.md  porting-plan.md  postmortem.md  source-stats.md
src/: arguments.rs  binary.rs  expression.rs  format.rs  lib.rs  sqlite.rs  table.rs  text.rs  value.rs
src/table/: concurrent.rs  debug.rs  index.rs  ordering.rs  row_mut.rs  schema.rs  storage.rs  views.rs
src/value/: borrowed.rs  data_type.rs  owned.rs
tests/: arguments.rs  binary.rs  expression.rs  format.rs  sqlite.rs  table.rs  text.rs  value.rs
