[package]
name = "gd-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "An idiomatic Rust port of the gd core data library"
license = "BSL-1.0"
documentation = "https://docs.rs/gd-rs"
repository = "https://github.com/kjn-void/gd-rs"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[lib]
name = "gd"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.12"
compact_str = "0.9.1"
csv = "1.3.1"
hex-simd = "0.8.0"
itoa = "1.0.18"
memchr = "2.8.3"
percent-encoding = "2.3.2"
ryu = "1.0.23"
rhai = "1.25.1"
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true, default-features = false }
serde_json = "1.0.150"
smallvec = "1.15.2"
thiserror = "2.0.18"
uuid = "1.23.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

[[bench]]
name = "value"
harness = false

[[bench]]
name = "arguments"
harness = false

[[bench]]
name = "table"
harness = false

[[bench]]
name = "binary"
harness = false

[[bench]]
name = "text"
harness = false

[[bench]]
name = "format"
harness = false

[[bench]]
name = "expression"
harness = false

[[bench]]
name = "sqlite"
harness = false
required-features = ["sqlite"]

[[bench]]
name = "table_nightly_simd"
harness = false

[profile.release]
codegen-units = 1
lto = "thin"

[lints.rust]
missing_docs = "deny"
unsafe_code = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly_simd)"] }

[lints.clippy]
all = "deny"
pedantic = "warn"
